--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <!-- hero section -->
+    <!-- incio seccion -->
 
     <div id="heroSection" class="hero-section">
         <div class="left">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <!-- menu section -->
+    <!-- menu seccion -->
 
     <section id="menuSection">
         <h2>Nuestro Menú</h2>
@@ -83,7 +83,7 @@
 
     </section>
 
-    <!-- trending food -->
+    <!-- mas deseado -->
 
     <section id="trendSection">
         <h2>Lo más Deseado</h2>
@@ -102,7 +102,7 @@
 
     </section>
 
-    <!-- testimonial -->
+    <!-- opiniones -->
 
     <section id="testimonialSection">
         <h2>Opiniones</h2>
@@ -125,7 +125,7 @@
         </div>
     </section>
 
-    <!-- blog section -->
+    <!-- sucursales seccion -->
 
     <section id="blogsection">
 
